# JobSpy

./: pyproject.toml
src/jobspy/scrapers/indeed/: __init__.py
